--- a/html/header.html
+++ b/html/header.html
@@ -14,14 +14,14 @@
         </section>
         <nav class="mainNav"> 　　　
             <ul class="clearfix">
-                <li><a  class="active" href="#" title="">首页</a></li>
-                <li><a href="#" title="">留学资讯</a></li>
-                <li><a href="#" title="">留学课程</a></li>
-                <li><a href="#" title="">艺术院校</a></li>
-                <li><a href="#" title="">成功案例</a></li>
-                <li><a href="#" title="">师资团队</a></li>
-                <li><a href="#" title="">作品展示</a></li>
-                <li><a href="#" title="">关于我们</a></li>
+                <li><a  class="active" href="index.php" title="">首页</a></li>
+                <li><a href="02_lxzx.php" title="">留学资讯</a></li>
+                <li><a href="03_lxkc.php" title="">留学课程</a></li>
+                <li><a href="04_ysyx.php" title="">艺术院校</a></li>
+                <li><a href="05_cgal.php" title="">成功案例</a></li>
+                <li><a href="06_sztd.php" title="">师资团队</a></li>
+                <li><a href="07_zpzs.php" title="">作品展示</a></li>
+                <li><a href="08_gywm.php" title="">关于我们</a></li>
                 <li class="li-decorate"><i class="m-icon m-icon-shadow-bl"></i></li>
             </ul>
         </nav>
